fix: attempt to cover gap on mobile app mode

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,6 +12,7 @@
 }
 
 .headerContent {
+  position: relative;
   height: var(--header-max-height);
   background-color: var(--ds-bg-page);
   border-radius: var(--ds-radius-xl) var(--ds-radius-xl) 0 0;
@@ -21,21 +22,22 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 var(--ds-space-6);
-  padding-block-end: env(safe-area-inset-bottom, 0);
   max-width: var(--text-content-max-width);
   margin: 0 auto;
 }
 
-/* Extend the header element to the bottom of the screen when in standalone/app mode */
-.headerContent::before {
-  content: '';
-  display: block;
-  position: absolute;
-  inset-inline: -1px;
-  top: 100%;
-  height: env(safe-area-inset-bottom, 0);
-  border-inline: 1px solid var(--ds-bg-container);
-  background-color: var(--ds-bg-page);
+@media (display-mode: standalone) {
+  /* Extend the header element to the bottom of the screen when in standalone/app mode */
+  .headerContent::before {
+    content: '';
+    display: block;
+    position: absolute;
+    inset-inline: -1px;
+    top: 100%;
+    height: 1em;
+    border-inline: 1px solid var(--ds-bg-container);
+    background-color: var(--ds-bg-page);
+  }
 }
 
 .appTitleContainer {
